# Computer

./: .ccls  .gitignore  compile_commands.json
.vim/: coc-settings.json
AI/LAB1/: .myImpl.py.un~  .readme.md.un~  .test.py.un~  .test.sh.un~  myImpl.py  pyrightconfig.json  readme.md  report.odt  test.sh
AI/LAB2/: .python-version  pyproject.toml  pyrightconfig.json
AI/LAB2/src1/: SVM.py  linearclassification.py  nBayesClassifier.py  test.py  test.sh
AI/LAB2/tests/: test_lab2.py
AI/stanford/: simple_gd.py  string_distance.py  test.sh
crawler/: .python-version  downloadImg.py  pic1  pic2  pyrightconfig.json  txt.py
crawler/biquge/: helper.py  txt.py
crawler/biquku/: helper.py  main.py
crawler/twitter/: actor.py  engine.py  helper.py  installed_pkg  logging  main.py  myLog.py  time  tweet.py  tweetCard.py  twitterDetail.py  twitterInfo.py  (+1 more)
dataPrivacy/: .mondrian.py.un~  .samarati.py.un~  .test.sh.un~  .~lock.K-Anonymity实验v0.5.pptx#  count  count.py  data_privacy.doc  mondrian.py  samarati.py  test.sh
dataPrivacy/ex2_v2/ex2_code/: Paillier_result  Paillier_test_result  client.py  main.py  paillier_test.py  pyproject.toml  pyrightconfig.json  server.py  test.py  test.sh
leetcode/: .vimspector.json
nvim/: coc-settings.json  coc-settings.json.backup  init.vim
oop/: oop.cpp  test  test.sh
quantumComputerPaperReview/: README.md
study_record/: .python-version  pyproject.toml  test.sh
study_record/database/: task.db  test.db
study_record/sqlalchemy/: connection.py  orm.py  orm_DDL.py
study_record/src/: guide.py  init.py  task.py
study_record/src/templates/: example.html
supervise/: .README.md.un~  .log_system.uml.un~  .prompt.txt.un~  .prompt_gen.py.un~  .task_list.txt.un~  .test.py.un~  .test.sh.un~  .test.txt.un~  README.md  log_system.uml  task_list.txt  test.py  test.sh
test_file/cpp/iterator/: CMakeLists.txt  iterator.cpp
test_file/python/sqlalchemy_toturial/: pyproject.toml  pyrightconfig.json  test.sh
test_file/python/sqlalchemy_toturial/tests/: test_sqlalchemy_toturial.py
wiki/: GTD.md  cli_tools.md  index.md  productivity.md  taskwarrior.md
(+351 files in other folders)
