[tool.poetry]
name = "study_record"
version = "0.1.0"
description = ""
authors = ["hyx <gacforstudy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.21"
pynvim = "^0.4.3"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
