[tool.poetry]
name = "LAB2"
version = "0.1.0"
description = ""
authors = ["hyx <gacforstudy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "1.8.1"
torchvision = "0.9.1"
cvxopt = "^1.2.6"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
