[tool.poetry]
name = "sqlalchemy_toturial"
version = "0.1.0"
description = ""
authors = ["hyx <gacforstudy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
